# simple-c-shooter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  WINDOWS_BUILD_TROUBLESHOOTING.md  build.bat  build.sh  install-deps.sh  quick-build.bat  vcpkg.json
.github/workflows/: build.yml  test.yml  windows-build.yml
.kiro/specs/simple-c-shooter/: design.md  requirements.md  tasks.md
include/: game_api.h
src/: audio_bridge.c  audio_bridge.h  game_api.c  graphics_bridge.cpp  graphics_bridge.h  main.c  physics_bridge.cpp  physics_bridge.h  ui_bridge.cpp  ui_bridge.h
src/audio/: audio_system.c  audio_system.h  sound_generator.c  sound_generator.h
src/core/: collision_system.c  collision_system.h  enemy_ai.c  enemy_ai.h  game_loop.c  game_loop.h  game_state.c  game_state.h  input_manager.c  input_manager.h  object_manager.c  object_manager.h
src/graphics/: camera.cpp  camera.hpp  hit_effects.cpp  hit_effects.hpp  material.cpp  material.hpp  math_utils.cpp  model.cpp  model.hpp  projectile_trail.cpp  projectile_trail.hpp  renderer.cpp  renderer.hpp  ui_renderer.cpp  ui_renderer.hpp
src/physics/: bunny_hop.cpp  bunny_hop.hpp  collision_detector.cpp  collision_detector.hpp  physics_engine.cpp  physics_engine.hpp
src/ui/: AudioSettings.cs  GameHUD.cs  MainMenu.cs  PauseMenu.cs  SettingsMenu.cs  SimpleShooter.UI.csproj  Speedometer.cs  UIManager.cs
